Publishing to gh-pages (deploy.sh)

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header class="site-header">
     <h1 class="site-title" id="top">Flavor Tree</h1>
+    <a href="./about">About</a>
 </header>
     <main>
         
